--- a/src/interfaces/default/style.css
+++ b/src/interfaces/default/style.css
@@ -513,7 +513,7 @@
 }
 
 .paintweb_cmd_selectionDelete, .paintweb_cmd_selectionFill, 
-.paintweb_cmd_selectionRotate {
+.paintweb_cmd_selectionRotation {
   border-left: 0;
   border-top: 0
 }
@@ -978,7 +978,7 @@
 
 .paintweb_cmd_selectionDelete a { background-image: url('icons/selectionDelete.png') }
 
-.paintweb_cmd_selectionRotate a { background-image: url('icons/selectionRotate.png') }
+.paintweb_cmd_selectionRotation a { background-image: url('icons/selectionRotation.png') }
 
 .paintweb_cmd_selectionFill a { background-image: url('icons/selectionFill.png') }
 
